--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -7,19 +7,19 @@
     <x>0</x>
     <y>0</y>
     <width>323</width>
-    <height>183</height>
+    <height>214</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
     <width>323</width>
-    <height>183</height>
+    <height>214</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
     <width>323</width>
-    <height>183</height>
+    <height>214</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -31,6 +31,13 @@
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout">
+    <item row="2" column="0">
+     <widget class="QTextEdit" name="txtLogOutput">
+      <property name="readOnly">
+       <bool>true</bool>
+      </property>
+     </widget>
+    </item>
     <item row="0" column="0">
      <layout class="QHBoxLayout" name="horizontalLayout_2">
       <item>
@@ -100,9 +107,12 @@
      </layout>
     </item>
     <item row="1" column="0">
-     <widget class="QTextEdit" name="txtLogOutput">
-      <property name="readOnly">
-       <bool>true</bool>
+     <widget class="QProgressBar" name="progressBar">
+      <property name="value">
+       <number>0</number>
+      </property>
+      <property name="textVisible">
+       <bool>false</bool>
       </property>
      </widget>
     </item>
