--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>323</width>
+    <width>362</width>
     <height>214</height>
    </rect>
   </property>
@@ -18,7 +18,7 @@
   </property>
   <property name="maximumSize">
    <size>
-    <width>323</width>
+    <width>362</width>
     <height>214</height>
    </size>
   </property>
@@ -31,10 +31,19 @@
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout">
-    <item row="2" column="0">
-     <widget class="QTextEdit" name="txtLogOutput">
-      <property name="readOnly">
-       <bool>true</bool>
+    <item row="1" column="0">
+     <widget class="QProgressBar" name="progressBar">
+      <property name="maximumSize">
+       <size>
+        <width>16777215</width>
+        <height>10</height>
+       </size>
+      </property>
+      <property name="value">
+       <number>0</number>
+      </property>
+      <property name="textVisible">
+       <bool>false</bool>
       </property>
      </widget>
     </item>
@@ -106,13 +115,10 @@
       </item>
      </layout>
     </item>
-    <item row="1" column="0">
-     <widget class="QProgressBar" name="progressBar">
-      <property name="value">
-       <number>0</number>
-      </property>
-      <property name="textVisible">
-       <bool>false</bool>
+    <item row="2" column="0">
+     <widget class="QTextEdit" name="txtLogOutput">
+      <property name="readOnly">
+       <bool>true</bool>
       </property>
      </widget>
     </item>
