--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -80,9 +80,9 @@
              </widget>
             </item>
             <item>
-             <widget class="QPushButton" name="btnSave">
+             <widget class="QPushButton" name="btnOpen">
               <property name="text">
-               <string>Save Result</string>
+               <string>Open Directory</string>
               </property>
              </widget>
             </item>
