--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -7,19 +7,19 @@
     <x>0</x>
     <y>0</y>
     <width>362</width>
-    <height>214</height>
+    <height>231</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
-    <width>323</width>
-    <height>214</height>
+    <width>362</width>
+    <height>231</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
     <width>362</width>
-    <height>214</height>
+    <height>231</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -86,6 +86,13 @@
               </property>
              </widget>
             </item>
+            <item>
+             <widget class="QToolButton" name="btnMusicManager">
+              <property name="text">
+               <string>...</string>
+              </property>
+             </widget>
+            </item>
            </layout>
           </item>
          </layout>
@@ -124,6 +131,11 @@
     </item>
    </layout>
   </widget>
+  <action name="actionOpen">
+   <property name="text">
+    <string>Open</string>
+   </property>
+  </action>
  </widget>
  <resources>
   <include location="icon.qrc"/>
